--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "brastlewark",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://llurensmartinez.github.io/BrastleWark_Finder_",
   "dependencies": {
     "caniuse-lite": "^1.0.30000974",
     "react": "^16.11.0",
@@ -13,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
