--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "brastlewark",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://llurensmartinez.github.io/BrastleWark_Finder_",
+  "homepage": "https://llurensmartinez.github.io/BrastleWark_Finder/",
   "dependencies": {
     "caniuse-lite": "^1.0.30000974",
     "react": "^16.11.0",
@@ -27,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  }
 }
